# agentic-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
00_intro/: README.md
01_course_structure/: README.md
02_setup/: README.md
03_gemini/: README.md  gemini_intro.ipynb  image_description.md
03_pydantic/: a)_pydantic_basics.ipynb
04_/: README.md
04_pydantic/: README.md
04_pydantic_gemini/: README.md
06_fastapi_crud/: README.md
07_pydanticai_fundamentals/: README.md  pydanticai_pydantic_model.ipynb
07_pydanticai_fundamentals/b_pydanticai_fastapi/: data_models.py  movies_api.py  setup_db.py  utils.py
08_pydanticai_chatbot/: README.md  chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector_database/: README.md  lancedb_basics.ipynb
10_pydanticai_rags/: README.md  explorations.ipynb  ingestion.py  pdfs_to_text.py
10_pydanticai_rags/backend/: data_models.py  rag.py
11_deploy_rag_serverless/: README.md  explorations.ipynb  ingestion.py  pdfs_to_text.py
backend/: Dockerfile  debug_pypdf.py  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/models/: api_models.py
backend/app/services/: researcher.py
backend/data/lancedb/research_docs.lance/_transactions/: 0-edd65d44-105c-40a4-b469-d3a9e3097d23.txn  1-8ea3186d-72ea-4465-aa3c-56aa547a1156.txn  2-0eb21c60-7d30-4133-9f76-7bf9c2ea6b38.txn  3-daaa1297-c1dc-4fe0-8caa-fc3fee173f2f.txn
backend/tests/: test_api.py
exercises/: exercise_0.md  exercise_1.md
frontend/: Dockerfile  package-lock.json  package.json
(+6 files in other folders)
