[project]
name = "reliable-researcher-backend"
version = "0.1.0"
description = "Backend for Reliable Researcher App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "langchain>=0.3.14",
    "langgraph>=0.2.64",
    "lancedb>=0.17.0",
    "pypdf>=5.1.0",
    "langchain-google-genai>=2.0.8",
    "langchain-community>=0.0.10",
    "langchain-text-splitters>=0.0.1",
    "langchain-groq>=0.1.3",
    "langchain-huggingface>=0.0.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "requests>=2.31.0",
    "sentence-transformers>=2.2.2"
]
